Added functions - displayQn - generateQuestion - viewAnswer - generateAnswer
TODO:
Return the textResult as a var instead (flashcardQn) so that the viewAswer function can use it to generate the answer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="loginWithGoogle">LOGIN WITH GOOGLE</string>
     <string name="newUserInfo">If you are a new user, click</string>
     <string name="existingAccountInfo">Already have an account?</string>
+    <string name="flashcardBanner">Click on either the tick or cross to start!</string>
 
     <string-array name="Languages">
         <item>English</item>
